argo-cd/argocd-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: gateway-infra 
    port: 443 # Указываем HTTPS порт
  - name: cilium-gateway
    namespace: gateway-infra
    port: 80 # Указываем HTTP порт
  hostnames:
  - "argocd.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80 # Внутри кластера Envoy пойдет на 80 порт ArgoCD без TLS
